--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@eslint/js": "^9.10.0",
     "eslint": "^9.10.0",
-    "eslint-plugin-jsdoc": "^50.2.2"
+    "eslint-plugin-jsdoc": "^50.2.2",
+    "globals": "^15.9.0"
   }
 }
